--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -143,12 +143,17 @@
       </div>
       <div class="col-md-6">
         <div class="row align-content-between">
-          <div class="col-10">
+          <div class="col-2">
             <h2 class="eleg">To do list</h2>
           </div>
-          <div class="col-2">
-            <a href="#" type="button" class="btn btn-dark">add</a>
+          <form class="form-control">
+          <div class="col-8">
+            <input type="text" placeholder="할 일 작성.." th:object="${TodoList.doing}">
           </div>
+          <div class="col-2">
+            <a href="todoList/add" type="submit" class="btn btn-dark">add</a>
+          </div>
+          </form>
 
         </div>
         <ul class="">
